--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
         <item>Sakit</item>
     </string-array>
     <string-array name="kelas_array">
+        <item>Pilih Kelas</item>
         <item>I</item>
         <item>II</item>
         <item>III</item>
@@ -28,4 +29,10 @@
         <item>V</item>
         <item>VI</item>
     </string-array>
+
+    <string name="action_settings">Settings</string>
+    <string name="action_filter">filter</string>
+    <string name="filter_all">All</string>
+    <string name="filter_active">Active</string>
+    <string name="filter_completed">Completed</string>
 </resources>
